--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="#" class="top"><i class='bx bx-arrow-back'></i></a>
 
     <header>
-         <div class="logo"><span>J</span>o<span>v</span>ic</div>
+        <div class="logo"><span>J</span>o<span>v</span>ic</div>
 
         <ul class="navlist">
             <li><a href="index.html" class="active">Home</a></li>
@@ -60,7 +60,7 @@
                 <div class="email-info">
                     <h5>Behance :</h5>
                     <span>behance.net/JOVIC</span>
-                </div> 
+                </div>
             </div>
             <div class="btn-box">
                 <a href="#" class="btn">Download CV</a>
@@ -504,7 +504,7 @@
     <!-- Footer Section ---->
 
     <footer>
-        <p>Copyright &copy;2024 by Justinodec || All Right Reserved </p>
+        <p>Copyright &COPY;2024 by Jovicglobal123 || All Right Reserved </p>
         <a href="#home"></a>
     </footer>
 
